# openclaw-agent-erpx

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: schedules.yaml  workflows.yaml
db/: alembic.ini
docs/: ARCHITECTURE.md  AUDIO_PIPELINE_SKELETON.md  BENCHMARK_DATASET.md  DEMO.md  DEPLOY_K8S.md  DEPLOY_STAGING_K3S.md  DESIGN_ACCOUNTING_AGENT_LAYER.md  DESIGN_OPENCLAW_AGENT_ERPX.md  DESIGN_PRINCIPLES_TIERED_AGENT.md  DEVLOG.md  K3S_6NODES.md  RUNBOOK.md  TIER_B_MAPPING.md  VISION_ROADMAP.md  WORKFLOWS.md
logs/: BAO_CAO_ACCEPTANCE_BLACKBOX_2026-02-10.md  BAO_CAO_KIEM_THU_2026-02-10.md  BAO_CAO_KIEM_THU_PASS2_2026-02-10.md  BAO_CAO_TOM_TAT_PO_CHECK_2026-02-10.md  BAO_CAO_VN_FEEDER_COMMAND_CENTER_2026-02-10.md  COMMAND_CENTER_FIX_REPORT_20260211.md  DATA_CLEANUP_MOCK_REMOVAL_20260211.md  DEV_FINAL_FIX_REPORT_20260211.md  DEV_FIX_REPORT_20260211.md  DEV_PO_FINAL_2026-02-11.md  PHASE9_SPEC_GAPS_FILLED_20260211.md  QA_ACCEPTANCE_ERP_AGENT_2026-02-11.md  QA_ACCEPTANCE_ERP_AGENT_2026-02-11_RERUN.md  QA_ACCEPTANCE_UI_SPA_2026-02-11.md  QA_CHIEF_ACCOUNTANT_GATE_20260212.md  QA_CHIEF_ACCOUNTANT_GATE_20260224.md  QA_FULL_ACCEPTANCE_2026-02-12.md  QA_FULL_ACCEPTANCE_2026-02-12_POSTFIX.md  QA_PO_FINAL_2026-02-11.md  QA_PO_FINAL_EVIDENCE_2026-02-11.json  QA_REGRESSION_ERP_AGENT_20260212.md  QA_REGRESSION_PROD_2026-02-12.md  QA_REPORT_20260210.md  QNA_HARDENING_REPORT_20260211.md  VISION_MILESTONES_PHASE_REPORT_20260211.md  manual_qa_report.json  qa_acceptance_mode_b_2026-02-11.json  randomized_llm_report_20260210.json  randomized_smoke_report.jsonl  randomized_smoke_summary.md
openapi/: agent-service.yaml  erpx-mock.yaml
scripts/: export_openapi.py  generate_demo_data.py  generate_kaggle_seed.py  generate_vn_synthetic_data.py  observe_agent_chain.py  prepare_real_vn_data.py  randomized_system_smoke.py  simulate_concurrent_approve.py  smoke_e2e.sh  (+6 more)
(+230 files in other folders)
